# Gem

./: .gitignore  README.MD  package-lock.json  package.json  screenpipe-poller.js
Gem/: CMakeLists.txt  debugwindow.cpp  debugwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  suggestionpopup.h  summarytext.cpp  summarytext.h
backend/: package-lock.json  package.json
backend/agent/: action-agent.js  agent-poller.js  suggest-and-act.js  suggestion-agent.js
backend/ocr/: cache-ocr.js  clean-ocr.js  screenpipe-poller.js
backend/threads/: thread-manager.js
backend/tools/: send-mail.js  summarise-document.js
backend/utility/: empty-object-checker.js  get-blacklist.js  llm-json-parser.js  logger.js  start-assistant.js  stop-assistant.js
frontend/: CMakeLists.txt  debugwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  suggestionpopup.cpp  suggestionpopup.h  summaryreadytoast.cpp  summaryreadytoast.h  summarytext.cpp
ocr/: cache-ocr.js  clean-ocr.js  screenpipe-poller.js
utility/: llm-json-parser.js
